create a window handle before trying to export windows

this prevents crashing when the window is foreign, consequently has no
handle, and we then pass nullptrs into
KWayland::Client::Surface::fromWindow

BUG: 462108